@@ -181,7 +181,9 @@ group.
 <H4><a name="Fl_Preferences.set">int set(const char *entry, int value)<BR>
 int set(const char *entry, int value)<BR>
 int set(const char *entry, float value)<BR>
+int set(const char *entry, float value, int precision)<BR>
 int set(const char *entry, double value)<BR>
+int set(const char *entry, double value, int precision)<BR>
 int set(const char *entry, const char *text)<BR>
 int set(const char *entry, const void *data, int size)</a></H4>
 
